--- a/css/style.css
+++ b/css/style.css
@@ -29,47 +29,81 @@ html, body {
     color: var(--color-theme-dark);
 }
 
+.container {
+    padding: 0;
+}
 
+
+
+/* header */
 .header {
     background-color: #ECECEC;
 }
     .header .container {
-        border: 1px solid black;
-        height: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        text-align: center;
+        padding-top: 2rem;
     }
         .header .container h1 {
             font-weight: var(--font-weight-bold);
             font-size: 2.2rem;
         }
 
-        .header .container a {
-            text-decoration: none;
-            color: var(--color-theme-dark);
-            font-weight: var(--font-weight-medium);
+        .header .container .links {
+            width: 25rem;
+            display: flex;
+            justify-content: space-between;
         }
-            .header .container a:hover {
-                color: var(--color-theme);
+            .header .container .links a {
+                text-decoration: none;
+                color: var(--color-theme-dark);
+                font-weight: var(--font-weight-medium);
             }
+                .header .container a:hover {
+                    color: var(--color-theme);
+                }
 
-        .header .container button {
-            height: 2.25rem;
-            width: 2.25rem;
-            background-color: var(--color-white);
-            border-radius: var(--border-radius-rounded);
-            border: none;
-            box-shadow: 0 0 7px rgba(112, 112, 112, 0.5);
+
+        .header .container .round-buttons {
+            display: flex;
+            justify-content: space-between;
+            width: 13rem;
         }
+            .header .container .round-buttons button {
+                position: relative;
+                height: 2.25rem;
+                width: 2.25rem;
+                background-color: var(--color-white);
+                border-radius: var(--border-radius-rounded);
+                border: none;
+                box-shadow: 0 0 8px rgb(190, 190, 190);
+            }
+                .header .container .round-buttons button:hover {
+                    background-color: var(--color-theme);
+                }
+
+                .header .container .round-buttons button .badge {
+                    background-color: var(--color-theme);
+                    position: absolute;
+                    font-size: 0.69rem;
+                    width: 1rem;
+                    height: 1rem;
+                    padding: 3px 0 0 0;
+                    top: -0.3rem;
+                    left: 1.4rem;
+                }
+                    .header .container .round-buttons button:hover .badge {
+                        background-color: var(--color-theme-dark);
+                    }
+
 
 
 .showcase {
     background-color: #ECECEC;
 }
     .showcase .container {
-        border: 1px solid black;
+        padding-top: 1.5rem;
     }
         .showcase .container .showcase-body {
             display: flex;
@@ -77,3 +111,16 @@ html, body {
             align-items: center;
             text-align: center;
         }
+            .showcase .container .showcase-body img {
+                height: 846px;
+                width: auto;
+            }
+
+
+
+
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1684px;
+    }
+}
