Added validation to the contact us form and fiex the contact us page layout

--- a/scss/core/_breakpoints.scss
+++ b/scss/core/_breakpoints.scss
@@ -28,8 +28,8 @@
     }
 }
 
-@mixin xxxl {
-    @media (min-width: #{$breakpoint-xxxl}) {
+@mixin fluid {
+    @media (min-width: #{$breakpoint-fluid}) {
         @content
     }
 }
