--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -32,8 +32,8 @@ $breakpoint-lg: 992px;
 $breakpoint-lg-max-width: 960px;
 $breakpoint-xl: 1200px;
 $breakpoint-xl-max-width: 1140px;
-$breakpoint-xxl: 1400px;
-$breakpoint-xxl-max-width: 1320px;
-$breakpoint-xxxl: 1600px;
-$breakpoint-xxxl-max-width: 1684px;
+$breakpoint-xxl: 1450px;
+$breakpoint-xxl-max-width: 1420px;
+$breakpoint-fluid: 1700px;
+$breakpoint-fluid-max-width: 1684px;
 @import "./breakpoints";
