--- a/scss/sections/_contact-us.scss
+++ b/scss/sections/_contact-us.scss
@@ -12,44 +12,61 @@
         #contactUsForm {
 
             .grid {
+                
                 display: grid;
-                gap: 2rem;
-                grid-template-columns: repeat(2, auto);
+                grid-template-columns: repeat(2, minmax(100px, 500px));
                 grid-template-rows: repeat(2, auto);
-                margin-bottom: 2rem;
+                margin-bottom: 4rem;
+                column-gap: 2rem;
 
-                .contact_form {
-                    flex: 1;
-                    padding: 1rem;
-                    width: auto;
-                    height: 50px;
-                    border: 1px solid #C6C6C6;
-                }
 
-                #contact_name {
+                .contactUsName {
                     grid-column: 1 / 2;
                 }
-
-                #contact_email {
+                .contactUsEmail {
                     grid-column: 2 / 3;
                 }
-    
-                #contact_comments {
-                    resize: none;
+                .contactUsComments {
                     grid-column: 1 / 3;
-                    padding: 1rem;
                     height: 140px;
                 }
 
-                > * {
-                    color: $color-theme-dark;
+                > div {
 
-                    &:focus {
-                        outline: 0;
-                        border: 1px solid $color-theme;
-                        box-shadow: 0 0 5px 0 $color-theme;
+
+                    label {
+                        display: none;
                     }
+                    
+                    #contactUsName,
+                    #contactUsEmail,
+                    #contactUsComments {
+                        padding: 1rem;
+                        height: 50px;
+                        width: 100%;
+                        border: 2px solid #C6C6C6;
+                        color: $color-theme-dark;
+
+                        &:focus {
+                            outline: 0;
+                            border: 2px solid rgba(255, 115, 115, 0.5);
+                            box-shadow: 0 0 5px 0 $color-theme;
+                        }
+                    }
+
+                    #contactUsComments {
+                        display: block;
+                        height: 100%;
+                        width: 100%;
+                        resize: none;
+                    }
+
+                    > div {
+                        height: 2rem;
+                    }
+
                 }
+
             }
 
             button {
