started work on new arrivals section

--- a/scss/core/_root.scss
+++ b/scss/core/_root.scss
@@ -4,6 +4,6 @@ html, body {
     line-height: 1.5;
     font-family: $font-poppins;
     font-weight: $font-weight-regular;
-    color: $color-theme-dark;
+    color: $color-dark;
 }
 
