--- a/scss/sections/_contact-us.scss
+++ b/scss/sections/_contact-us.scss
@@ -45,7 +45,7 @@
                         height: 50px;
                         width: 100%;
                         border: 2px solid #C6C6C6;
-                        color: $color-theme-dark;
+                        color: $color-dark;
 
                         &:focus {
                             outline: 0;
