--- a/scss/sections/_showcase.scss
+++ b/scss/sections/_showcase.scss
@@ -1,5 +1,5 @@
 .showcase {
-    background: $color-gradient;
+    background: $color-gradient-gray-10;
 
     .container {
         padding-top: 1.5rem;
