--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "./core/components/buttons";
 
 @import "./sections/header";
+@import "./sections/_new-arrivals";
 @import "./sections/showcase";
 @import "./sections/site-title";
 @import "./sections/contact-us";
