--- a/scss/core/_breakpoints.scss
+++ b/scss/core/_breakpoints.scss
@@ -28,8 +28,8 @@
     }
 }
 
-@mixin fluid {
-    @media (min-width: #{$breakpoint-fluid}) {
+@mixin xxxl {
+    @media (min-width: #{$breakpoint-xxxl}) {
         @content
     }
 }
