--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -19,18 +19,18 @@
     @include xxl {
         max-width: $breakpoint-xxl-max-width;
     }
-    @include fluid {
-        max-width: $breakpoint-fluid-max-width;
+    @include xxxl {
+        max-width: $breakpoint-xxxl-max-width;
     }
 }
 
+
 a {
-    color: $color-theme-dark;
+    color: $color-dark;
     text-decoration: none;
     transition: 0.2s ease-in-out;
 
     &:hover {
         color: $color-theme;
-        text-decoration: underline;
     }
 }
