--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,95 +1,84 @@
 .header {
-    background: $color-gradient;
+    background: $color-gradient-gray-10;
+}
+
+.__navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 2rem;
     
-    .container {
+
+    .logotype {
+        flex: 1;
+        justify-content: flex-start;
+
+        a {
+            font-weight: $font-weight-bold;
+            font-size: 2.2rem;
+        }
+    }
+
+
+    .nav-links {
+        flex: 2;
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        padding-top: 2rem;
+        justify-content: center;
 
-        .logotype {
-            flex: 1;
-            justify-content: flex-start;
-
-            a {
-                text-decoration: none;
-                color: $color-theme-dark;
-                font-weight: $font-weight-bold;
-                font-size: 2.2rem;
-    
-                &:hover {
-                    color: $color-theme;
-                }
-            }
+        a {
+            margin: 0 1rem;
+            text-align: center;
+            font-weight: $font-weight-medium;
         }
+    }
 
+    .nav-icon-links {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
 
-        .links {
-            flex: 2;
+        a {
             display: flex;
-            align-items: center;
+            position: relative;
             justify-content: center;
+            align-items: center;
+            margin-left: 1.25rem;
+            height: 2.25rem;
+            width: 2.25rem;
+            background-color: $color-white;
+            color: $color-dark;
+            border-radius: $border-radius-rounded;
+            box-shadow: 0 0 8px rgb(190, 190, 190);
 
-            a {
-                margin: 0 1rem;
-                text-align: center;
-                text-decoration: none;
-                color: $color-theme-dark;
-                font-weight: $font-weight-medium;
-
-                &:hover {
-                    color: $color-theme;
-                }
+            &:first-child {
+                margin-left: 0;
             }
-        }
 
-        .round-buttons {
-            flex: 1;
-            display: flex;
-            justify-content: flex-end;
+            &:hover {
+                background-color: $color-theme;
+                color: $color-dark;
+            }
 
-            button {
-                margin: 0 0.6rem;
-                position: relative;
-                height: 2.25rem;
-                width: 2.25rem;
-                background-color: $color-white;
-                border-radius: $border-radius-rounded;
-                border: none;
-                box-shadow: 0 0 8px rgb(190, 190, 190);
+            .badge {
+                background-color: $color-theme;
+                position: absolute;
+                font-size: 0.69rem;
+                width: 1rem;
+                height: 1rem;
+                padding: 3px 0 0 0;
+                top: -0.3rem;
+                left: 1.4rem;
+            }
 
-                &:first-child {
-                    margin-left: 0;
-                }
-
-                &:last-child {
-                    margin-right: 0;
-                }
-
-                &:hover {
-                    background-color: $color-theme;
-                }
-
-                .badge {
-                    background-color: $color-theme;
-                    position: absolute;
-                    font-size: 0.69rem;
-                    width: 1rem;
-                    height: 1rem;
-                    padding: 3px 0 0 0;
-                    top: -0.3rem;
-                    left: 1.4rem;
-                }
-
-                &:hover .badge {
-                    background-color: $color-theme-dark;
-                }
+            &:hover .badge {
+                background-color: $color-dark;
             }
         }
     }
 }
 
 
-.header-white {
+.__navbar-white {
     background: none;
 }
