--- a/scss/core/components/_buttons.scss
+++ b/scss/core/components/_buttons.scss
@@ -1,15 +1,35 @@
 .btn-theme {
-    position: relative;
     display: flex;
+    position: relative;
     background: $color-theme;
     border-radius: 0;
     border: none;
     font-weight: $font-weight-semibold;
     color: $color-white;
-    width: 11.75rem;
-    height: 3.75rem;
     align-items: center;
     justify-content: center;
+
+    .btn-theme-box-left,
+    .btn-theme-box-right {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: transparent;
+    }
+
+    .btn-theme-box-left {
+        left: 10px;
+        top: 10px;
+        border-left: 2px solid $color-white;
+        border-top: 2px solid $color-white;
+    }
+
+    .btn-theme-box-right {
+        right: 10px;
+        bottom: 10px;
+        border-right: 2px solid $color-white;
+        border-bottom: 2px solid $color-white;
+    }
 
     &:hover {
         background-color: $color-dark;
@@ -17,17 +37,39 @@
     }
 }
 
+
 .btn-theme-dark {
     display: flex;
+    position: relative;
     background: $color-dark;
     border-radius: 0;
     border: none;
     font-weight: $font-weight-semibold;
     color: $color-white;
-    width: 11.75rem;
-    height: 3.75rem;
     align-items: center;
     justify-content: center;
+
+    .btn-theme-box-left,
+    .btn-theme-box-right {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: transparent;
+    }
+
+    .btn-theme-box-left {
+        left: 10px;
+        top: 10px;
+        border-left: 2px solid $color-white;
+        border-top: 2px solid $color-white;
+    }
+
+    .btn-theme-box-right {
+        right: 10px;
+        bottom: 10px;
+        border-right: 2px solid $color-white;
+        border-bottom: 2px solid $color-white;
+    }
 
     &:hover {
         background-color: $color-theme;
@@ -35,20 +77,52 @@
     }
 }
 
-.btn-white {
+
+.btn-white{
     display: flex;
+    position: relative;
     background: $color-white;
     border-radius: 0;
     border: none;
     font-weight: $font-weight-semibold;
     color: $color-dark;
-    width: 11.75rem;
-    height: 3.75rem;
     align-items: center;
     justify-content: center;
 
+    .btn-theme-box-left,
+    .btn-theme-box-right {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: transparent;
+    }
+
+    .btn-theme-box-left {
+        left: 10px;
+        top: 10px;
+        border-left: 2px solid $color-dark;
+        border-top: 2px solid $color-dark;
+    }
+
+    .btn-theme-box-right {
+        right: 10px;
+        bottom: 10px;
+        border-right: 2px solid $color-dark;
+        border-bottom: 2px solid $color-dark;
+    }
+
     &:hover {
-        background-color: $color-theme;
+        background-color: $color-dark;
         color: $color-white;
+    }
+
+    &:hover .btn-theme-box-left {
+        border-left: 2px solid $color-white;
+        border-top: 2px solid $color-white;
+    }
+
+    &:hover .btn-theme-box-right {
+        border-right: 2px solid $color-white;
+        border-bottom: 2px solid $color-white;
     }
 }
