--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,6 @@
 @import "./sections/header";
 @import "./sections/_new-arrivals";
 @import "./sections/showcase";
-@import "./sections/site-title";
+@import "./sections/featured-products";
 @import "./sections/contact-us";
 @import "./sections/footer";
