--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -28,7 +28,7 @@
 a {
     color: $color-dark;
     text-decoration: none;
-    transition: 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
     &:hover {
         color: $color-theme;
