--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -6,11 +6,14 @@ $color-white: #ffffff;
 $color-silver: #CAC0BE;
 
 $color-gradient-gray-10: linear-gradient(90deg, rgba(231,231,231,1) 0%, rgba(245,245,245,1) 100%);
-// $color-gradient-gray-20: ;
+
 
 $color-gray-5: #f8f8f8;
+$color-gray-8: #F5F5F5;
 $color-gray-10: #ECECEC;
 $color-gray-20: #E8E8E8;
+$color-gray-40: #cdced0;
+$color-gray-50: #616365;
 
 $font-poppins: 'Poppins', sans-serif;
 $font-weight-regular: 400;
@@ -25,6 +28,8 @@ $font-size-20: 1.25rem;
 $border-radius-small: 8px;
 $border-radius-medium: 25px;
 $border-radius-rounded: 50%;
+
+$max-width-1100: 1100px;
 
 $breakpoint-sm: 576px;
 $breakpoint-sm-max-width: 540px;
