--- a/scss/sections/_featured-products.scss
+++ b/scss/sections/_featured-products.scss
@@ -2,8 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     margin-top: 4rem;
-    border: 1px solid black;
+
+    > h1 {
+        font-weight: $font-weight-bold;
+        font-size: $font-size-20;
+        margin-bottom: 1.5rem;
+    }
 
     .row {
         display: flex;
@@ -12,7 +18,6 @@
         gap: 30px;
 
         .col {
-            border: 1px solid black;
             padding: 0;
             width: 255px;
             max-height: 323px;
@@ -22,6 +27,7 @@
                 .__card {
 
                     .__card-top {
+                        background-color: $color-gray-40;
 
                         .card-menu {
                             top: 0;
@@ -60,6 +66,7 @@
                     height: 13.125rem;
                     max-width: 255px;
                     max-height: 210px;
+                    transition: all 0.3s ease-in-out;
 
                     .card-menu {
                         position: absolute;
@@ -92,7 +99,7 @@
                             width: 2.25rem;
                             background-color: $color-white;
                             border-radius: $border-radius-rounded;
-                            transition: all 0.3s ease-in-out;
+                            transition: all 0.2s ease-in-out;
                         }
                     }
 
@@ -153,14 +160,18 @@
                             margin-right: 0.5rem;
                             transition: all 0.3s ease-in-out;
                         }
+
+                        .card-price {
+                            font-weight: $font-weight-semibold;
+                            font-size: 1.125rem;
+                        }
     
                         .card-discount-price {
-                            left: -32px;
+                            left: -36px;
                             position: relative;
                             font-weight: $font-weight-semibold;
                             font-size: 1.125rem;
                             transition: all 0.3s ease-in-out;
-                            
                         }
                     }
                 }
