updated javascript to change the input text color when there is error

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,5 @@
 @import "./sections/showcase";
 @import "./sections/featured-products";
 @import "./sections/contact-us";
+@import "./sections/google-map";
 @import "./sections/footer";
