added our speciality section

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -3,16 +3,19 @@
 $color-theme: #FF7373;
 $color-dark: #222529;
 $color-white: #ffffff;
-$color-silver: #CAC0BE;
 
 $color-gradient-gray-10: linear-gradient(90deg, rgba(231,231,231,1) 0%, rgba(245,245,245,1) 100%);
 
+$color-silver: #CAC0BE;
+$color-brown: #75695C;
 
 $color-gray-5: #f8f8f8;
 $color-gray-8: #F5F5F5;
 $color-gray-10: #ECECEC;
 $color-gray-20: #E8E8E8;
 $color-gray-40: #cdced0;
+$color-gray-45: #D9D9D9;
+$color-gray-47: #BBBBBB;
 $color-gray-50: #616365;
 
 $font-poppins: 'Poppins', sans-serif;
