--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,8 @@
 @import "./sections/_new-arrivals";
 @import "./sections/showcase";
 @import "./sections/featured-products";
+@import "./sections/top-picks";
+@import "./sections//out-speciality";
 @import "./sections/contact-us";
 @import "./sections/google-map";
 @import "./sections/footer";
