--- a/scss/core/components/_buttons.scss
+++ b/scss/core/components/_buttons.scss
@@ -1,3 +1,41 @@
+.btn-theme,
+.btn-theme-dark,
+.btn-white {
+
+    width: 188px;
+    height: 60px;
+    font-weight: $font-weight-semibold;
+
+    .btn-box-left,
+    .btn-box-right {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: transparent;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .btn-box-left {
+        left: 10px;
+        top: 10px;
+    }
+
+    .btn-box-right {
+        right: 10px;
+        bottom: 10px;
+    }
+
+    &:hover .btn-box-left {
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+    }
+
+    &:hover .btn-box-right {
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+    }
+}
+
 .btn-theme {
     display: flex;
     position: relative;
@@ -8,25 +46,14 @@
     color: $color-white;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease-in-out;
 
-    .btn-theme-box-left,
-    .btn-theme-box-right {
-        position: absolute;
-        height: 20px;
-        width: 20px;
-        background-color: transparent;
-    }
-
-    .btn-theme-box-left {
-        left: 10px;
-        top: 10px;
+    .btn-box-left {
         border-left: 2px solid $color-white;
         border-top: 2px solid $color-white;
     }
 
-    .btn-theme-box-right {
-        right: 10px;
-        bottom: 10px;
+    .btn-box-right {
         border-right: 2px solid $color-white;
         border-bottom: 2px solid $color-white;
     }
@@ -48,36 +75,35 @@
     color: $color-white;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease-in-out;
 
     > h1 {
         color: orange;
     }
 
-    .btn-theme-box-left,
-    .btn-theme-box-right {
-        position: absolute;
-        height: 20px;
-        width: 20px;
-        background-color: transparent;
-    }
-
-    .btn-theme-box-left {
-        left: 10px;
-        top: 10px;
+    .btn-box-left {
         border-left: 2px solid $color-white;
         border-top: 2px solid $color-white;
     }
 
-    .btn-theme-box-right {
-        right: 10px;
-        bottom: 10px;
+    .btn-box-right {
         border-right: 2px solid $color-white;
         border-bottom: 2px solid $color-white;
     }
 
     &:hover {
-        background-color: $color-theme;
-        color: $color-white;
+        background-color: $color-white;
+        color: $color-dark;
+    }
+
+    &:hover .btn-box-left {
+        border-left: 2px solid $color-dark;
+        border-top: 2px solid $color-dark;
+    }
+
+    &:hover .btn-box-right {
+        border-right: 2px solid $color-dark;
+        border-bottom: 2px solid $color-dark;
     }
 }
 
@@ -92,25 +118,14 @@
     color: $color-dark;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease-in-out;
 
-    .btn-theme-box-left,
-    .btn-theme-box-right {
-        position: absolute;
-        height: 20px;
-        width: 20px;
-        background-color: transparent;
-    }
-
-    .btn-theme-box-left {
-        left: 10px;
-        top: 10px;
+    .btn-box-left {
         border-left: 2px solid $color-dark;
         border-top: 2px solid $color-dark;
     }
 
-    .btn-theme-box-right {
-        right: 10px;
-        bottom: 10px;
+    .btn-box-right {
         border-right: 2px solid $color-dark;
         border-bottom: 2px solid $color-dark;
     }
@@ -120,12 +135,12 @@
         color: $color-white;
     }
 
-    &:hover .btn-theme-box-left {
+    &:hover .btn-box-left {
         border-left: 2px solid $color-white;
         border-top: 2px solid $color-white;
     }
 
-    &:hover .btn-theme-box-right {
+    &:hover .btn-box-right {
         border-right: 2px solid $color-white;
         border-bottom: 2px solid $color-white;
     }
