--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,13 +3,15 @@
 @import "./core/utilities";
 
 @import "./core/components/buttons";
+@import "./core/components/product-card";
 
 @import "./sections/header";
 @import "./sections/_new-arrivals";
 @import "./sections/showcase";
 @import "./sections/featured-products";
 @import "./sections/top-picks";
-@import "./sections//out-speciality";
+@import "./sections//our-speciality";
+@import "./sections/special-deals";
 @import "./sections/contact-us";
 @import "./sections/google-map";
 @import "./sections/footer";
