--- a/scss/core/components/_product-card.scss
+++ b/scss/core/components/_product-card.scss
@@ -1,19 +1,19 @@
 .row {
-    display: flex;
-    justify-content: center;
-    max-width: 1110px;
-    gap: 30px;
+    justify-content: space-between;
+    height: 669px;
 
     .col {
-        padding: 0;
-        width: 255px;
+        max-width: 255px;
         max-height: 323px;
+        padding: 0;
+        margin: 0;
+        margin-bottom: 23px;
 
         &:hover {
 
-            .__card {
+            .card {
 
-                .__card-top {
+                .card-top {
                     background-color: $color-gray-40;
 
                     .card-menu {
@@ -26,7 +26,7 @@
                     }
                 }
 
-                .__card-body {
+                .card-body {
 
                     .card-price {
 
@@ -42,17 +42,17 @@
             }
         }
         
-        .__card {
+        .card {
             position: relative;
             border-radius: 0;
+            border: none;
 
-            .__card-top {
+            .card-top {
                 position: relative;
                 overflow: hidden;
                 background-color: $color-gray-8;
-                height: 13.125rem;
                 max-width: 255px;
-                max-height: 210px;
+                height: 210px;
                 transition: all 0.3s ease-in-out;
 
                 .card-menu {
@@ -103,12 +103,13 @@
 
             }
 
-            .__card-body {
+            .card-body {
                 overflow: hidden;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                height: 113px;
 
                 h5 {
                     margin-top: 0.5rem;
@@ -144,13 +145,9 @@
                         left: -100%;
                         text-decoration: line-through;
                         font-size: 1rem;
-                        margin-right: 0.5rem;
+                        margin-right: 0;
+                        margin-bottom: 0;
                         transition: all 0.3s ease-in-out;
-                    }
-
-                    .card-price {
-                        font-weight: $font-weight-semibold;
-                        font-size: 1.125rem;
                     }
 
                     .card-discount-price {
@@ -159,6 +156,7 @@
                         font-weight: $font-weight-semibold;
                         font-size: 1.125rem;
                         transition: all 0.3s ease-in-out;
+                        margin-bottom: 0;
                     }
                 }
             }
