--- a/scss/sections/_featured-products.scss
+++ b/scss/sections/_featured-products.scss
@@ -1,13 +1,17 @@
 .featured-products {
+    margin-top: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 4rem;
 
     > h1 {
         font-weight: $font-weight-bold;
         font-size: $font-size-20;
         margin-bottom: 1.5rem;
+    }
+
+    .row {
+        width: 1110px;
     }
 }
