--- a/scss/sections/_special-deals.scss
+++ b/scss/sections/_special-deals.scss
@@ -1,22 +1,22 @@
 .special-deal {
-    position: relative;
     margin-top: 4rem;
-    display: flex;
+    display: grid;
     justify-content: space-between;
-    border: 1px solid black;
-
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    
     .flash-sale {
         display: flex;
         align-items: center;
         justify-content: center;
-        flex: 1;
-        max-height: 100%;
-        max-width: 825px;
+        flex-direction: column;
         background-color: $color-gray-47;
-        
+        width: 825px;
+        height: 669px;
+        margin: 0;
     }
 
     .row {
-        flex: 1;
+        margin: 0;
     }
 }
