--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./sections/top-picks";
 @import "./sections//our-speciality";
 @import "./sections/special-deals";
+@import "./sections/sale-banner";
 @import "./sections/contact-us";
 @import "./sections/google-map";
 @import "./sections/footer";
