--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -16,7 +16,8 @@ $color-gray-20: #E8E8E8;
 $color-gray-40: #cdced0;
 $color-gray-45: #D9D9D9;
 $color-gray-47: #BBBBBB;
-$color-gray-50: #616365;
+$color-gray-50: #7E7F80;
+$color-gray-60: #616365;
 
 $font-poppins: 'Poppins', sans-serif;
 $font-weight-regular: 400;
@@ -26,7 +27,9 @@ $font-weight-bold: 700;
 $font-weight-extrabold: 800;
 
 $font-size-60: 3.75rem;
+$font-size-45: 2.8125rem;
 $font-size-20: 1.25rem;
+
 
 $border-radius-small: 8px;
 $border-radius-medium: 25px;
