--- a/scss/core/components/_product-card.scss
+++ b/scss/core/components/_product-card.scss
@@ -110,10 +110,11 @@
                 justify-content: center;
                 align-items: center;
                 height: 113px;
+                padding: 0;
 
                 h5 {
                     margin-top: 0.5rem;
-                    color: $color-gray-50;
+                    color: $color-gray-60;
                     font-weight: $font-weight-medium;
                     font-size: 0.81rem;
                 }
@@ -133,6 +134,14 @@
                         color: $color-theme;
                         height: 1.125rem;
                         width: auto;
+
+                        &:first-child {
+                            margin-left: 0;
+                        }
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
                     }
                 }
 
@@ -142,7 +151,7 @@
 
                     .card-old-price {
                         position: relative;
-                        left: -100%;
+                        left: -110%;
                         text-decoration: line-through;
                         font-size: 1rem;
                         margin-right: 0;
@@ -157,6 +166,13 @@
                         font-size: 1.125rem;
                         transition: all 0.3s ease-in-out;
                         margin-bottom: 0;
+                        margin-left: 1rem;
+                    }
+
+                    .card-static-price {
+                        font-weight: $font-weight-semibold;
+                        font-size: 1.125rem;
+
                     }
                 }
             }
