added section with latest, best selling and top reacted products

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -15,8 +15,9 @@ $color-gray-10: #ECECEC;
 $color-gray-20: #E8E8E8;
 $color-gray-40: #cdced0;
 $color-gray-45: #D9D9D9;
-$color-gray-47: #BBBBBB;
-$color-gray-50: #7E7F80;
+$color-gray-47: #bcbcbd;
+$color-gray-50: #BBBBBB;
+$color-gray-58: #7E7F80;
 $color-gray-60: #616365;
 
 $font-poppins: 'Poppins', sans-serif;
