--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -6,6 +6,8 @@ footer {
     height: 6.875rem;
     width: 100%;
     background-color: $color-gray-5;
+    margin-top: 4rem;
+    border-top: 1px solid $color-gray-47;
 
     .social-media {
         font-size: 1.25rem;
