--- a/scss/sections/_special-deals.scss
+++ b/scss/sections/_special-deals.scss
@@ -1,4 +1,4 @@
-.special-deal {
+.special-deals {
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
@@ -18,7 +18,7 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            background-color: $color-gray-47;
+            background-color: $color-gray-50;
             width: 825px;
             height: 669px;
             margin: 0;
@@ -32,8 +32,56 @@
 
             .col {
 
-                .card-body {
-                    align-items: flex-start;
+                &:hover {
+
+                    .card {
+        
+                        .card-top {
+                            background-color: $color-gray-40;
+        
+                            .card-menu {
+                                top: 0;
+                                
+                            }
+        
+                            .btn {
+                                top: calc(100% - 50px);
+                            }
+                        }
+        
+                        .card-body {
+        
+                            .card-price {
+        
+                                .card-old-price {
+                                    left: 0;
+                                }
+        
+                                .card-discount-price {
+                                    left: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .card {
+
+                    .card-body {
+                        align-items: flex-start;
+    
+                        .card-price {
+
+                            .card-old-price {
+                                top: 0.2rem;
+                            }
+    
+                            .card-discount-price {
+                                position: absolute;
+                                left: -1rem;
+                            }
+                        }
+                    }
                 }
             }
         }
