--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 @import "./sections//our-speciality";
 @import "./sections/special-deals";
 @import "./sections/sale-banner";
+@import "./sections/product-list";
+@import "./sections/footer-links";
 @import "./sections/contact-us";
 @import "./sections/google-map";
 @import "./sections/footer";
