--- a/scss/core/components/_product-card.scss
+++ b/scss/core/components/_product-card.scss
@@ -17,6 +17,7 @@
                     background-color: $color-gray-40;
 
                     .card-menu {
+                        transition: top 0.3s ease-in-out 0.2s;
                         top: 0;
                         
                     }
@@ -63,10 +64,10 @@
                     text-align: center;
                     z-index: 2;
                     padding: 0;
-                    transition: all 0.3s ease-in-out;
+                    transition: top 0.3s ease-in-out;
 
                     > a {
-                        transition: all 0.1s ease-in-out;
+                        
                         &:hover {
                             color: $color-white;
 
@@ -74,19 +75,18 @@
                                 background-color: $color-dark;
                             }
                         }
-                    }
 
-
-                    li {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        margin: 0.6rem 0;
-                        height: 2.25rem;
-                        width: 2.25rem;
-                        background-color: $color-white;
-                        border-radius: $border-radius-rounded;
-                        transition: all 0.2s ease-in-out;
+                        li {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            margin: 0.6rem 0;
+                            height: 2.25rem;
+                            width: 2.25rem;
+                            background-color: $color-white;
+                            border-radius: $border-radius-rounded;
+                            transition: background-color 0.3s ease-in-out;
+                        }
                     }
                 }
 
@@ -98,7 +98,6 @@
                     height: 50px;
                     font-size: 0.875rem;
                     font-weight: $font-weight-regular;
-                    transition: all 0.3s ease-in-out;
                 }
 
             }
@@ -156,7 +155,7 @@
                         font-size: 1rem;
                         margin-right: 0;
                         margin-bottom: 0;
-                        transition: all 0.3s ease-in-out;
+                        transition: left 0.3s ease-in-out;
                     }
 
                     .card-discount-price {
@@ -164,9 +163,9 @@
                         position: relative;
                         font-weight: $font-weight-semibold;
                         font-size: 1.125rem;
-                        transition: all 0.3s ease-in-out;
                         margin-bottom: 0;
                         margin-left: 1rem;
+                        transition: left 0.3s ease-in-out;
                     }
 
                     .card-static-price {
