--- a/scss/sections/_product-list.scss
+++ b/scss/sections/_product-list.scss
@@ -29,6 +29,7 @@
                         background-color: $color-gray-40;
     
                         .card-menu {
+                            transition: left 0.3s ease-in-out 0.2s;
                             left: 0;
                             
                         }
@@ -79,10 +80,10 @@
                         text-align: center;
                         z-index: 2;
                         padding: 0;
-                        transition: all 0.3s ease-in-out;
+                        transition: left 0.3s ease-in-out;
     
                         > a {
-                            transition: all 0.1s ease-in-out;
+
                             &:hover {
                                 color: $color-white;
     
@@ -90,20 +91,22 @@
                                     background-color: $color-dark;
                                 }
                             }
+
+                            li {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                margin: 0.6rem 0;
+                                height: 2.25rem;
+                                width: 2.25rem;
+                                background-color: $color-white;
+                                border-radius: $border-radius-rounded;
+                                transition: background-color 0.3s ease-in-out;
+                            }
                         }
     
     
-                        li {
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            margin: 0.6rem 0;
-                            height: 2.25rem;
-                            width: 2.25rem;
-                            background-color: $color-white;
-                            border-radius: $border-radius-rounded;
-                            transition: all 0.2s ease-in-out;
-                        }
+
                     }
     
                     .btn {
@@ -114,7 +117,6 @@
                         height: 50px;
                         font-size: 0.875rem;
                         font-weight: $font-weight-regular;
-                        transition: all 0.3s ease-in-out;
                     }
     
                 }
@@ -170,7 +172,7 @@
                             text-decoration: line-through;
                             font-size: 1rem;
                             margin-top: 1rem;
-                            transition: all 0.3s ease-in-out;
+                            transition: left 0.3s ease-in-out;
                         }
     
                         .card-discount-price {
@@ -178,9 +180,9 @@
                             left: -1rem;
                             font-weight: $font-weight-semibold;
                             font-size: 1.125rem;
-                            transition: all 0.3s ease-in-out;
                             margin-bottom: 0;
                             margin-left: 1rem;
+                            transition: left 0.3s ease-in-out;
                         }
     
                         .card-static-price {
