--- a/scss/core/components/_buttons.scss
+++ b/scss/core/components/_buttons.scss
@@ -5,7 +5,7 @@
     width: 188px;
     height: 60px;
     font-weight: $font-weight-semibold;
-    transition: all 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out, background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 
     .btn-box-left,
     .btn-box-right {
